css/styles.css
/* Overall styling */
body {
    font-family: Helvetica, Arial, sans-serif;
}

h1 {
    font-size: 28px;
}

Html, body, div {
    padding: 0;
    border: 0;
    margin: 0;
}

.logo img {
    margin-top: 2%;
}

.margin-top-2 {
    margin-top: 2%;
}

.margin-top-4 {
    margin-top: 4%;
}

.none {
    display: none;
}

/* Intro page styling */
#introText p {
    font-size: 1.3em;
    margin-top: 5%;
    margin-bottom: 4%;
}

/* Profile page styling */
.alert-text {
    font-size: 17.5px;
    text-align: center;
}

.control-label {
    font-size: 16px;
}

.form-horizontal .control-label {
    text-align: left;
}

#weekly-mileage {
    margin-left: -1%;
    margin-top: 3%;
}

/* Profile page styling - Typeahead */

.twitter-typeahead .tt-query,
.twitter-typeahead .tt-hint {
    margin-bottom: 0;
}

.tt-hint {
    display: block;
    width: 100%;
    height: 38px;
    padding: 8px 12px;
    font-size: 14px;
    line-height: 1.428571429;
    color: #555;
    vertical-align: middle;
    background-color: #ffffff;
    border: 1px solid #cccccc;
    border-radius: 4px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
    -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
          transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
}

.tt-menu {
    min-width: 160px;
    margin-top: 2px;
    padding: 5px 0;
    background-color: #ffffff;
    border: 1px solid #cccccc;
    border: 1px solid rgba(0, 0, 0, 0.15);
    border-radius: 4px;
    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
          box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
    background-clip: padding-box;

}

.tt-suggestion {
    display: block;
    padding: 3px 20px;
}

.tt-suggestion:hover {
    color: #fff;
    background-color: #428bca;
    cursor: pointer;
    margin-left: 1%;
}

.tt-suggestion.tt-is-under-cursor a {
    color: #fff;
}

.tt-suggestion p {
    margin: 0;
}

.tt-cursor{
    background-color: #428bca;
    color: #FFFFFF;
}

/* Visualization page styling */

.axis text {
    font-size: 12px;
    fill: #666;
}

#back {
    margin-bottom: 20%;
}

.bold {
    font-weight: bold;
}

.citation {
    fill: #666;
    font-size: 11px;
}

.citation-larger {
    fill: #666;
    font-size: 13.5px;
}

#driving-paragraph-one {
    margin-top: 19%;
}

.grid line, .grid path {
    fill: none;
    stroke: lightgrey;
    opacity: 0.7;
    stroke-dasharray: 3,2;
    shape-rendering: crispEdges;
}

.grid text {
    display: none;
}

hr {
    border-color: #D8D8D8;   
}

.legend {
    fill: #666;
}

.legend-line {
    fill: #de9ed6;
}

.not-first {
    margin-top: 4%;
}

.paragraph {
    font-size: 17.5px;
    margin-top: 3%;
}

.paragraph-larger {
    font-size: 20.5px;
    margin-top: 3%;
}

path.domain {
    display: none;
}

.personal-line {
    stroke: #de9ed6;
    stroke-width: 3;
}

.text {
    margin-top: 5%;
}

.tooltip-stuff {
    position: absolute;
    z-index: 10;
    display: none;
    background: #eee;
    box-shadow: 0 0 5px #999999;
    color: #333;
    font-size: 12px;
    padding: 10px;
    text-align: center;
    width: 100px;
    white-space: pre-line;
}

.xAxisLine path {
    display: inline;
    fill: none;
    stroke: lightgrey;
    stroke-width: 1.05;
    shape-rendering: crispEdges;
}

.yAxisLabel {
    font-size: 13px;
}

/* Visualization page styling- Color scheme */
.blue {
    color: #6baed6;
}

.green {
    color: #98df8a;
}

.peach {
    color: #fdd0a2;
}

.purple {
    color: #de9ed6;
}

.grey {
    color: #808080;
}

